# sqlx-test

./: Cargo.toml  README.md
migrations/: 00001_user_table.sql  20220324213422_person_table.sql
src/: main.rs  user.rs
