[package]
name = "sqlx-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
rand = "0.8.5"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "sqlite", "uuid", "migrate" ] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
